--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
     background-color: mediumslateblue;
     color: white;
-    font-family: "Poppins", sans-serif;
+    font-family: rgba(25, 125, 82, 0.522);
     min-height: 100vh;
 }
 
